Convert FastAdapter code to FlexibleAdatper and group events by time
- Also grouping announcements by time